--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .button {
+    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  }
+  .input {
+    @apply my-2 px-2 py-2 placeholder-blue-300 text-blue-600 relative bg-white rounded text-sm border-0 shadow outline-none focus:outline-none focus:ring w-full;
+  }
+  .small-input {
+    @apply placeholder-blue-300 text-blue-600 text-center bg-white rounded border-0 shadow w-10;
+  }
+  .menutext{
+    @apply text-gray-800 hover:text-blue-400 px-3 py-2 rounded-md text-base font-medium dark:text-white;
+  }
+  .tbl-cell{
+    @apply border border-stone-800 bg-blue-100;
+  }
+}
+
+/*disable input scroll
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+*/
