--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,7 +16,7 @@
     @apply text-gray-800 hover:text-blue-400 px-3 py-2 rounded-md text-base font-medium dark:text-white;
   }
   .tbl-cell{
-    @apply border border-stone-800 bg-blue-100;
+    @apply border border-stone-800;
   }
 }
 
